# ddd-ai-sample

./: .dockerignore  .gitignore  README.md  detail_readme.md  pyproject.toml
app/command/: question.py  status.py
app/domain/llm_client/: __init__.py  llm_client_base.py
app/domain/question_answer/: build_prompt.py
app/infra/llm_client/: gemini.py
app/usecase/question_answer/: dto.py  usecase.py
tests/: README.md
tests/domain/llm_client/: test_llm_client_base.py
tests/domain/question_answer/: test_prompt.py
tests/infra/llm_client/: test_gemini.py
tests/usecase/question_answer/: test_dto.py  test_usecase.py
